<resources>
    <!-- general -->
    <string name="app_name">Give a Tip</string>
    <!-- broadcast keys -->
    <string name="action_location_broadcast" translatable="false">projectM.LOCATION_BROADCAST</string>
    <!-- intent keys -->
    <string name="i_user" translatable="false">USER</string>
    <string name="i_location" translatable="false">LOCATION</string>
    <string name="i_sign_out" translatable="false">SIGN_OUT</string>
    <string name="i_latitude" translatable="false">LATITUDE</string>
    <string name="i_longitude" translatable="false">LONGITUDE</string>
    <string name="i_notification_report_id" translatable="false">NOTIFICATION_REPORT_ID</string>
    <string name="i_notification_comment" translatable="false">NOTIFICATION_COMMENT</string>
    <string name="i_notification_comment_boolean" translatable="false">IS_NOTIFICATION_COMMENT</string>
    <string name="i_notification_vote" translatable="false">NOTIFICATION_VOTE</string>
    <!-- shared preferences -->
    <string name="sp_key" translatable="false">PROJECT_M_SEM</string>
    <string name="sp_user_login" translatable="false">USER_LOGIN</string>
    <string name="sp_user_login_checked" translatable="false">USER_LOGIN_CHECKED</string>
    <string name="sp_set_distance" translatable="false">SET_SETTINGS_DISTANCE</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This username is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="connection_err">Unable to connect to server</string>
    <string name="login_store_credentials">Remember login settings</string>
    <!-- Strings related to create account -->
    <string name="create_acc_create_btn">Create Account</string>
    <string name="action_create_user">Create new account</string>
    <string name="create_pwd_no_match">The passwords did not match</string>
    <string name="create_username_taken">That username is already in use</string>
    <!-- Strings for MainActivity -->
    <string name="title_activity_main_drawer">Give a tip</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_sign_out">Sign Out</string>
    <string name="nav_create_r">Create Report</string>
    <string name="nav_leaderboard">Highscore</string>
    <string name="action_settings">Settings</string>
    <string name="nav_user_id">User Id: %d</string>
    <!-- Strings for CreateReportActivity -->
    <string name="create_r_desc">Description</string>
    <string name="create_r_location">Location</string>
    <string name="create_r_submit">Submit Report</string>
    <string name="create_r_desc_size_err">The description must be between %1$d and %2$d characters long</string>
    <!-- Strings for the notifications -->
    <string name="notification_title">There is an issue near you!</string>
    <string name="notification_content_text">Can you confirm that: %s</string>
    <string name="notification_confirm">Confirm</string>
    <string name="notification_deny">Deny</string>
    <string name="notification_comment">Comment</string>
    <string name="notification_vote" translatable="false">Comment</string>
    <string name="notification_channel_name" translatable="false">Report proximity channel</string>
    <string name="notification_channel_desc" translatable="false">This channel is used for notifying you about near by reports</string>
    <!-- Strings for about -->
    <string name="about" translatable="false">This is a page for storing information about the application, I guess…</string>
    <!-- Strings related to Settings -->
    <string name="title_activity_settings">Settings</string>
    <string name="set_distance">The radius, in which you will receive notifications</string>
    <string name="set_dist_val" translatable="false">%d m</string>
    <string name="set_distance_err">The distance has to be between %1$d and %2$d meters…</string>
    <string name="last_known_long" translatable="false">last_known_long</string>
    <string name="last_known_lat" translatable="false">last_known_lat</string>
    <string name="title_activity_drawer" translatable="false">DrawerActivity</string>
    <string name="reports_map">Reports map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="getting_report">Getting report...</string>
    <string name="comment">Comment</string>
    <string name="title_activity_view_report" translatable="false">ViewReportActivity</string>
    <string name="i_report" translatable="false">report</string>

    <!-- TODO: Remove this before hand in -->
    <string name="rank_points">Your points: 25. You are winning!</string>
    <string name="rank" translatable="false">Simon, points: 25
    Thomas, points: 15
    Veronika, points: 10
    Anonym, points: 5
    Hans: points: 5
    </string>
</resources>
