<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_main"
            android:icon="@mipmap/logo"
            android:title="@string/reports_map" />
        <item
            android:id="@+id/nav_create_report"
            android:icon="@mipmap/plus_b"
            android:title="@string/nav_create_r" />
        <item
            android:id="@+id/nav_show_leaderboard"
            android:icon="@mipmap/leaderboard"
            android:title="@string/nav_leaderboard" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/action_settings" />
        <item
            android:id="@+id/nav_sign_out"
            android:icon="@mipmap/sign_out"
            android:title="@string/nav_sign_out" />
    </group>
</menu>
